RESOLVED FIXED55076
Web Inspector toolbar looks bad in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=55076
Summary Web Inspector toolbar looks bad in WebKit2
Anders Carlsson
Reported 2011-02-23 13:04:19 PST
Web Inspector toolbar looks bad in WebKit2
Attachments
Patch (2.16 KB, patch)
2011-02-23 13:05 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-02-23 13:05:51 PST
Anders Carlsson
Comment 2 2011-02-23 13:08:45 PST
Note You need to log in before you can comment on or make changes to this bug.