2011-02-23  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        Web Inspector toolbar looks bad in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=55076
        <rdar://problem/8866258>

        * UIProcess/API/mac/WKView.mm:
        (-[WKView mouseDownCanMoveWindow]):
        Return NO from mouseDownCanMoveWindow to prevent drags in the (now transparent) inspector WKView
        from dragging the window around.

        * UIProcess/mac/WebInspectorProxyMac.mm:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage):
        Call [WKView setDrawsBackground:NO].


Canonical link: https://commits.webkit.org/69399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79479 268f45cc-cd09-0410-ab3c-d52691b4dbfc